--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-# Since .env is gitignored, you can use .env.example to build a new `.env` file when you clone the repo.
-# Keep this file up-to-date when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any secrets in it.
-# If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
-
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL=""
+
+# Admin Auth Mock
+ADMIN_EMAIL=""
+ADMIN_PASSWORD=""
+
+# JWT
+JWT_SECRET_KEY=""
+
+# AWS S3
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_REGION=""
