--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "sharp": "^0.31.3",
+    "stripe": "^11.6.0",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
